RESOLVED FIXED208388
macCatalyst: 'Open' context menu item doesn't work
https://bugs.webkit.org/show_bug.cgi?id=208388
Summary macCatalyst: 'Open' context menu item doesn't work
Tim Horton
Reported 2020-02-28 13:13:15 PST
macCatalyst: 'Open' context menu item doesn't work
Attachments
Patch (6.42 KB, patch)
2020-02-28 13:13 PST, Tim Horton
wenson_hsieh: review+
commit-queue: commit-queue-
Archive of layout-test-results from webkit-cq-01 for mac-mojave (4.24 MB, application/zip)
2020-02-28 14:01 PST, WebKit Commit Bot
no flags
Tim Horton
Comment 1 2020-02-28 13:13:45 PST
Tim Horton
Comment 2 2020-02-28 13:13:47 PST
WebKit Commit Bot
Comment 3 2020-02-28 14:01:15 PST
Comment on attachment 392010 [details] Patch Rejecting attachment 392010 [details] from commit-queue. New failing tests: editing/spelling/spellcheck-paste-continuous-disabled.html Full output: https://webkit-queues.webkit.org/results/13330743
WebKit Commit Bot
Comment 4 2020-02-28 14:01:17 PST
Created attachment 392017 [details] Archive of layout-test-results from webkit-cq-01 for mac-mojave The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-mojave Platform: Mac OS X 10.14.6
Tim Horton
Comment 5 2020-02-28 14:24:52 PST
Note You need to log in before you can comment on or make changes to this bug.