Cherry-pick r257659. rdar://problem/60183766

macCatalyst: 'Open' context menu item doesn't work
    https://bugs.webkit.org/show_bug.cgi?id=208388
    <rdar://problem/59820273>

    Reviewed by Wenson Hsieh.

    * UIProcess/ios/WKContentViewInteraction.h:
    * UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView cleanupInteraction]):
    (-[WKContentView _webTouchEventsRecognized:]):
    (-[WKContentView _doubleTapRecognizedForDoubleClick:]):
    (-[WKContentView _singleTapRecognized:]):
    (-[WKContentView _attemptClickAtLocation:modifierFlags:]):
    (-[WKContentView _mouseGestureRecognizerChanged:]):
    In r178980, a mechanism was introduced to ensure that synthetic clicks are
    only dispatched to the page that the user originally touched.

    macCatalyst's WKMouseGestureRecognizer unintentionally entirely bypassed
    this mechanism, never setting _layerTreeTransactionIdAtLastTouchStart,
    because the touch event gesture recognizer is disabled. This was generally
    fine because in this case, we don't need to send synthetic clicks,
    instead sending proper mouse events.

    However, the "Open" context menu item works by sending a synthetic click
    at the original interaction location. Since we did not set
    _layerTreeTransactionIdAtLastTouchStart, the Web Content process will
    ignore the click, and perform no action.

    Fix this by also setting _layerTreeTransactionIdAtLastTouchStart
    on mouseDown.

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257659 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@258155 268f45cc-cd09-0410-ab3c-d52691b4dbfc